@@ -14,6 +14,7 @@
  - Fixed test names map in `tests/runner.cxx`. (#354)
  - Integral `from_string` now accept leading whitespace, as in composite types.
  - Parser prototype for composite types.  (#355)
+ - Use `stream_from` without knowing the number of fields.  (#357)
 7.1.2
  - Document build in `BUILDING-configure.md` / `BUILDING-cmake.md`.
  - Work around silly clang warning in `test_errorhandler.cxx`.
